--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
     <!-- TELA DE PÂNICO (BOSS KEY) -->
     <div id="boss-screen" class="boss-screen">
-        <iframe src="https://saladofuturo.educacao.sp.gov.br" frameborder="0"></iframe>
+        <!-- Botão discreto para sair do modo pânico -->
+        <button id="exit-boss" title="Sair"><i class="fas fa-times"></i></button>
+        <iframe src="https://classroom.google.com/h" frameborder="0"></iframe>
     </div>
 
     <button id="back-to-top" aria-label="Voltar ao topo">
