--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <div id="app-container"></div>
 
     <!-- TELA DE PÂNICO (BOSS KEY) -->
+    <!-- Atualizado para Sala do Futuro -->
     <div id="boss-screen" class="boss-screen">
-        <!-- Botão discreto para sair do modo pânico -->
         <button id="exit-boss" title="Sair"><i class="fas fa-times"></i></button>
-        <iframe src="https://classroom.google.com/h" frameborder="0"></iframe>
+        <iframe src="https://saladofuturo.educacao.sp.gov.br" frameborder="0"></iframe>
     </div>
 
     <button id="back-to-top" aria-label="Voltar ao topo">
