--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500;700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500;700;800&family=Inter:wght@400;500;600&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <link rel="stylesheet" href="assets/style.css">
@@ -21,7 +21,6 @@
     <div id="app-container"></div>
 
     <!-- TELA DE PÂNICO (BOSS KEY) -->
-    <!-- Atualizado para Sala do Futuro -->
     <div id="boss-screen" class="boss-screen">
         <button id="exit-boss" title="Sair"><i class="fas fa-times"></i></button>
         <iframe src="https://saladofuturo.educacao.sp.gov.br" frameborder="0"></iframe>
