--- a/index.html
+++ b/index.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#050505">
-    <title>Ninja Labs</title>
+    <title>Ninja Labs | Acesso Restrito</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500;700;800&family=Inter:wght@400;500;600&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500;700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+    <!-- LOADER -->
     <div id="loader">
         <div class="spinner"></div>
     </div>
     
+    <!-- CONTEÚDO PRINCIPAL -->
     <div id="app-container"></div>
 
     <!-- TELA DE PÂNICO (BOSS KEY) -->
     <div id="boss-screen" class="boss-screen">
-        <button id="exit-boss" title="Sair"><i class="fas fa-times"></i></button>
-        <iframe src="https://saladofuturo.educacao.sp.gov.br" frameborder="0"></iframe>
+        <button id="exit-boss" title="Sair do Modo Pânico"><i class="fas fa-times"></i></button>
+        <iframe id="boss-frame" src="" frameborder="0"></iframe>
     </div>
 
+    <!-- VOLTAR AO TOPO -->
     <button id="back-to-top" aria-label="Voltar ao topo">
         <i class="fas fa-arrow-up"></i>
     </button>
