--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#050505">
-    <title>Ninja Labs | Acesso Restrito</title>
+    <title>Ninja Labs</title>
+
+    <!-- FAVICON (Para trocar no Boss Mode) -->
+    <link id="site-favicon" rel="shortcut icon" href="about:blank">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
